--- a/Mango/Mango.csproj
+++ b/Mango/Mango.csproj
@@ -122,7 +122,7 @@
     <Compile Include="Enums\appVersionCheckerEnums.cs" />
     <Compile Include="Fundamentals\timer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="String\regex.cs" />
+    <Compile Include="String\wordService.cs" />
     <Compile Include="UI\acrylic.cs" />
     <Compile Include="UI\animations.cs" />
   </ItemGroup>
